# nova-squadron

./: .gitignore  CMakeLists.txt  todo
src/: novaSquadron.cpp
src/core/: GameException.hpp  appWindow.cpp  appWindow.hpp  appWindows.hpp  defs.h  game.cpp  game.hpp  renderable.hpp  sprite.cpp  sprite.hpp  spriteMap.hpp  spriteSheet.cpp  spriteSheet.hpp  spriteSheetManager.cpp  spriteSheetManager.hpp  stateful.hpp
src/utils/: random.cpp  random.hpp
src/world/: background.cpp  background.hpp  enemy.hpp  entity.cpp  entity.hpp  player.cpp  player.hpp  world.cpp  world.hpp
